--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.12.0
 
 environment:
-  sdk: '>=2.19.0-146.2.beta <3.0.0'
+  sdk:  '>=2.15.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,6 +41,11 @@ dependencies:
   splashscreen:
   firebase_core: ^2.14.0
   firebase_auth:
+  firebase_messaging:
+  firebase_database:
+  cloud_firestore:
+  flutter_platform_widgets:
+
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +71,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/pmt/
     - assets/images/
     - assets/images/welcomepageimages/
     - assets/images/Logo/
